--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "browser-sync": "^2.26.7",
     "del": "^5.0.0",
+    "grade-js": "^1.0.10",
     "gulp-rename": "^1.4.0"
   },
   "devDependencies": {
